package it.polimi.ingsw.exceptions;

public abstract class SantoriniException extends Exception {

    public SantoriniException(String message) {
        super(message);
    }
}
