@startuml

title __EXCEPTIONS's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.exceptions {
      class it.polimi.ingsw.exceptions.DomePresentException {
          + DomePresentException()
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.exceptions {
      class it.polimi.ingsw.exceptions.PositionOutsideBoardException {
          + PositionOutsideBoardException()
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.exceptions {
      abstract class it.polimi.ingsw.exceptions.SantoriniException {
          + SantoriniException()
      }
    }
  }
  

  it.polimi.ingsw.exceptions.DomePresentException -up-|> it.polimi.ingsw.exceptions.SantoriniException
  it.polimi.ingsw.exceptions.PositionOutsideBoardException -up-|> it.polimi.ingsw.exceptions.SantoriniException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
